<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/terminalLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComandoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                style="@style/terminalInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/ip"
                tools:text="@string/ip" />

            <EditText
                android:id="@+id/editTextIp"
                style="@style/terminalInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/ip_endereco"
                android:textAlignment="center"
                tools:text="@string/ip_endereco" />

            <TextView
                android:id="@+id/textView2"
                style="@style/terminalInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/porta"
                tools:text="@string/porta" />

            <EditText
                android:id="@+id/editTextPorta"
                style="@style/terminalInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:inputType="number"
                android:text="@string/porta_numero"
                android:textAlignment="center"
                tools:text="@string/porta_numero" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                style="@style/terminalInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:text="@string/senha" />

            <EditText
                android:id="@+id/editTextSenha"
                style="@style/terminalInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:gravity="center_vertical"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonConectar"
                style="@style/terminalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/bt_conectar"
                tools:text="@string/bt_conectar" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextComando"
                style="@style/terminalInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/buttonEnviar"
                style="@style/terminalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bt_enviar"
                tools:text="@string/bt_enviar" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TableLayout
            android:id="@+id/TableLayoutBotoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/buttonVolumeMais"
                    style="@style/terminalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/bt_volume_mais" />

                <Button
                    android:id="@+id/buttonVolumeMenos"
                    style="@style/terminalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/bt_volume_menos" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/buttonDesligar"
                    style="@style/terminalButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/bt_desligar" />

                <Button
                    android:id="@+id/buttonReiniciar"
                    style="@style/terminalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/bt_reiniciar" />

                <Button
                    android:id="@+id/buttonSuspender"
                    style="@style/terminalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/bt_suspender" />

                <Button
                    android:id="@+id/buttonBloquear"
                    style="@style/terminalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/bt_bloquear" />
            </TableRow>

        </TableLayout>

        <EditText
            android:id="@+id/editTextResultado"
            style="@style/terminalInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:editable="false"
            android:ems="10"
            android:enabled="false"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>