<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/terminalLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MouseActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" >

                <Button
                    android:id="@+id/buttonCima"
                    style="@style/terminalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/bt_cima" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" >

                <Button
                    android:id="@+id/buttonEsquerda"
                    style="@style/terminalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/bt_esquerda" />

                <Button
                    android:id="@+id/buttonCentro"
                    style="@style/terminalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/bt_centro" />

                <Button
                    android:id="@+id/buttonDireita"
                    style="@style/terminalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/bt_direita" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" >

                <Button
                    android:id="@+id/buttonBaixo"
                    style="@style/terminalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/bt_baixo" />
            </TableRow>

            <TableRow>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="50dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" >

                <Button
                    android:id="@+id/buttonEsquerdo"
                    style="@style/terminalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/bt_esquerdo" />

                <Button
                    android:id="@+id/buttonDireito"
                    style="@style/terminalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/bt_direito" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutClique"
            style="@style/touchpadArea"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"></LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>